feat: crate updated prifile user routes and test, documetation.
